
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct target_t {int id; } ;


 struct target_t* target_list ;

__attribute__((used)) static int
find_target_by_id (int id, struct target_t **target)
{
    int i;

    for (i=0; target_list[i].id != -1; i++)
    {
 if (target_list[i].id == id)
 {
     *target = &target_list[i];
     return 0;
 }
    }

    return -1;
}
